force-app/main/default/objects/Client_Objective_TimesSeries__c/Client_Objective_TimesSeries__c.object-meta.xml
<CustomObject>
    <label>Client Objective TimesSeries</label>
    <nameField>
        <displayFormat>COTS-{YYYY}-{MM}-{0000000}</displayFormat>
        <label>COTS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Objective TimesSeries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>