force-app/main/default/objects/Client_Objective_TimesSeries__c/fields/Client_Objective__c.field-meta.xml
<CustomField>
    <fullName>Client_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client-Objective</label>
    <referenceTo>Client_Objective__c</referenceTo>
    <relationshipLabel>Client Objective TimeSeries</relationshipLabel>
    <relationshipName>Client_Objective_TimeSeries</relationshipName>
    <type>Lookup</type>
</CustomField>