force-app/main/default/objects/Client_Objective_TimesSeries__c/fields/Days_Since_Tested__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Tested__c</fullName>
    <label>Days Since Tested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>