force-app/main/default/objects/Client_Objective_TimesSeries__c/fields/Last_Tested__c.field-meta.xml
<CustomField>
    <fullName>Last_Tested__c</fullName>
    <label>Last Tested</label>
    <type>Date</type>
</CustomField>