force-app/main/default/objects/Client_Objective_TimesSeries__c/fields/Last_Tested_Correct__c.field-meta.xml
<CustomField>
    <fullName>Last_Tested_Correct__c</fullName>
    <label>Last Tested Correct</label>
    <type>Date</type>
</CustomField>