force-app/main/default/objects/Client_Objective_TimesSeries__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Objective</label>
    <referenceTo>Objective__c</referenceTo>
    <relationshipName>Client_Objectives_TS</relationshipName>
    <type>Lookup</type>
</CustomField>