force-app/main/default/objects/Client_Objective_TimesSeries__c/fields/ProgramObjective__c.field-meta.xml
<CustomField>
    <fullName>ProgramObjective__c</fullName>
    <formula>Program_Name__c &amp; &quot;-&quot; &amp; Objective_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProgramObjective</label>
    <type>Text</type>
</CustomField>