force-app/main/default/objects/Client_Objective_TimesSeries__c/fields/SD_Name__c.field-meta.xml
<CustomField>
    <fullName>SD_Name__c</fullName>
    <formula>Objective__r.SD_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SD Name</label>
    <type>Text</type>
</CustomField>