force-app/main/default/objects/Client_Objective_TimesSeries__c/fields/TS_Load_DateTime__c.field-meta.xml
<CustomField>
    <fullName>TS_Load_DateTime__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>TS Load DateTime</label>
    <type>DateTime</type>
</CustomField>